# build-risk-dashboard

./: .env.prod.example  .env.scanner.example  .env.server.example  .gitignore  DATASET_ENRICHMENT_FLOW.md  Dockerfile.scanner  HUONG_DAN_FUNCTIONAL_OVERVIEW.md  LATEX_TEMPLATE_FUNCTIONAL_OVERVIEW.tex  MODEL_PIPELINE_FLOW.md  QUICK_START_UML_DIAGRAMS.md  README.md  docker-compose.prod.yml  docker-compose.scanner.yml  docker-compose.server.yml  docker-compose.yml  generate_diagrams.sh
backend/: .env.example  Dockerfile  README.md  celery.logv  enrich.py  feature_extractors.py  pyproject.toml
backend/app/: celery_app.py  config.py  main.py  paths.py
backend/app/api/: admin_invitations.py  admin_repos.py  admin_users.py  auth.py  build_sources.py  builds.py  comparison.py  dashboard.py  data_sources.py  dataset.py  dataset_validation.py  dataset_versions.py  datasets.py  export.py  features.py  integrations.py  logs.py  model_repos.py  monitoring.py  notifications.py  pipeline.py  repos.py  settings.py  sonar.py  statistics.py  templates.py  tokens.py  training_scenarios.py  user_settings.py  users.py  webhook.py  websocket.py
backend/app/ci_providers/: __init__.py  base.py  circleci.py  config.py  factory.py  github.py  gitlab.py  jenkins.py  models.py  travis.py
backend/app/core/: redis.py
backend/app/database/: ensure_indexes.py  mongo.py
backend/app/dtos/: __init__.py  admin_repo.py  admin_user.py  auth.py  build.py  comparison.py  dashboard.py  data_quality.py  data_source.py  dataset.py  dataset_repo.py  dataset_template.py  dataset_validation.py  dataset_version.py  enrichment.py  feature.py  github.py  integration.py  notification.py  pipeline.py  repository.py  scan_statistics.py  user.py  (+5 more)
backend/scripts/: .env.example  README.md  generate_entity_doc.py  main.py  requirements.txt  seed_circleci_template.py  seed_prediction_template.py  seed_travistorrent_template.py  set_admin.py
backend/tests/: test_comment_stripping.py  test_diff_analyzer_logic.py  test_git_feature_extractor_mock.py  test_github_discussion_extractor_logic.py  test_github_token_pool.py  test_log_collection_manual.py  test_log_parser.py  test_log_parser_java.py  test_pipeline_git_features.py
backend/training/: run_inference.py  training.py  training_on_colab.ipynb
(+744 files in other folders)
